# safe_core

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  release.yml  tests.yml
safe_core/: __init__.py  version.py
safe_core/constants/: __init__.py  algorithms.py  defaults.py
safe_core/core/: __init__.py  authentication.py  data_operations.py  engine.py  initialization.py  password_management.py  provider_registry.py  rate_limited.py  streaming_factory.py
safe_core/crypto/: __init__.py
safe_core/crypto/providers/: __init__.py  base.py  cipher.py  kdf.py
safe_core/crypto/streaming/: __init__.py  decryptor.py  encryptor.py
safe_core/data_structures/: __init__.py  config.py  container.py  streaming_header.py
safe_core/exceptions/: __init__.py  errors.py
safe_core/key_management/: __init__.py  hierarchy.py  purpose.py  secure_bytes.py
safe_core/security/: __init__.py  rate_limiter.py  utils.py
safe_core/utils/: __init__.py  config_presets.py
tests/: __init__.py  conftest.py  test_authentication.py  test_encryption_decryption.py  test_initialization.py  test_integration.py  test_password_management.py  test_rate_limiting.py  test_streaming.py
